Add Anticipate Settings shortcut, fix animations w/o quick switch; add temporary block from using quick switch <5.0

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="dialog_corners">2dp</dimen>
     <dimen name="icon_size">40dp</dimen>
     <dimen name="floating_size">56dp</dimen>
+    <dimen name="floating_margin">16dp</dimen>
     <dimen name="floating_padding">16dp</dimen>
 </resources>
