--- a/app/src/main/res/layout/bubble_quick_switch.xml
+++ b/app/src/main/res/layout/bubble_quick_switch.xml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/floating_size"
-    android:layout_height="@dimen/floating_size"
+    android:layout_width="@dimen/bubble_size_padding"
+    android:layout_height="@dimen/bubble_size_padding"
     android:orientation="vertical">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="80.4dp"
+        android:layout_height="84.4dp"
+        android:layout_gravity="center"
+        app:cardCornerRadius="28dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@id/bubble_quick_switch_icon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bubble"
-        android:contentDescription="@null"
-        android:padding="16dp" />
+        <ImageView
+            android:id="@id/bubble_quick_switch_icon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/bubble"
+            android:contentDescription="@null"
+            android:padding="16dp" />
 
-    <com.pluscubed.anticipate.widget.ProgressWheel
-        android:id="@id/bubble_quick_switch_progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:matProg_barWidth="2dp"
-        app:matProg_fillRadius="true"
-        app:matProg_progressIndeterminate="true" />
+        <com.pluscubed.anticipate.widget.ProgressWheel
+            android:id="@id/bubble_quick_switch_progress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            app:matProg_barWidth="2dp"
+            app:matProg_fillRadius="true"
+            app:matProg_progressIndeterminate="true" />
+
+    </android.support.v7.widget.CardView>
 
 </FrameLayout>
