--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,8 @@
                             android:layout_marginEnd="16dp"
                             android:layout_marginRight="16dp"
                             android:contentDescription="@null"
-                            android:src="@drawable/earth" />
+                            android:src="@drawable/ic_earth"
+                            tools:tint="@color/blue_800" />
 
                         <TextView
                             android:layout_width="wrap_content"
