--- a/app/src/main/res/layout/activity_perapplist.xml
+++ b/app/src/main/res/layout/activity_perapplist.xml
@@ -54,7 +54,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.pluscubed.anticipate.ViewBelowAppBarBehavior">
+        app:layout_behavior="com.pluscubed.anticipate.widget.ViewBelowAppBarBehavior">
 
         <me.zhanghai.android.materialprogressbar.MaterialProgressBar
             android:id="@id/progressbar"
