--- a/app/src/main/res/layout/spinner_dropdown.xml
+++ b/app/src/main/res/layout/spinner_dropdown.xml
@@ -5,4 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:ellipsize="marquee"
-    android:singleLine="true" />
+    android:singleLine="true"
+    android:textSize="13sp" />
