--- a/app/src/main/res/layout/spinner_dropdown_icon.xml
+++ b/app/src/main/res/layout/spinner_dropdown_icon.xml
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:ellipsize="marquee"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:textSize="13sp" />
 
     <Space
         android:layout_width="8dp"
