Fix more problems with unending service, add progress for 4.x support

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,4 +4,6 @@
     <style name="Theme.Anticipate" parent="Base.Theme.Anticipate">
         <item name="toolbarShadow">@null</item>
     </style>
+
+    <integer name="launchMode">0</integer>
 </resources>
