--- a/app/src/main/res/layout/activity_main_color.xml
+++ b/app/src/main/res/layout/activity_main_color.xml
@@ -37,8 +37,8 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginRight="32dp"
-                android:src="@drawable/ic_color_lens_black_24dp"
-                android:tint="#8a000000" />
+                android:tint="#8a000000"
+                app:srcCompat="@drawable/ic_color_lens_black_24dp" />
 
             <TextView
                 android:layout_width="0dp"
@@ -76,8 +76,8 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginRight="32dp"
-                android:src="@drawable/ic_colorize_black_24dp"
-                android:tint="#8a000000" />
+                android:tint="#8a000000"
+                app:srcCompat="@drawable/ic_colorize_black_24dp" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -131,8 +131,8 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginRight="32dp"
-                android:src="@drawable/ic_web_asset_black_24dp"
-                android:tint="#8a000000" />
+                android:tint="#8a000000"
+                app:srcCompat="@drawable/ic_web_asset_black_24dp" />
 
             <LinearLayout
                 android:layout_width="0dp"
