--- a/app/src/main/res/layout/activity_main_top.xml
+++ b/app/src/main/res/layout/activity_main_top.xml
@@ -55,7 +55,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/enable_accessibility_service" />
+            android:text="@string/enable_accessibility_service"
+            android:textColor="?android:textColorPrimary" />
 
         <Space
             android:layout_width="match_parent"
@@ -77,7 +78,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:contentDescription="@null"
-                android:src="@drawable/ic_earth"
+                app:srcCompat="@drawable/ic_earth"
                 tools:tint="@color/blue_800" />
 
             <TextView
@@ -97,7 +98,8 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/set_as_default_browser" />
+            android:text="@string/set_as_default_browser"
+            android:textColor="?android:textColorPrimary" />
 
         <Space
             android:layout_width="match_parent"
