Fix bubble discard X, fix vector crashes on 4.x, fix swipe crash

--- a/app/src/main/res/drawable/bubble_clear.xml
+++ b/app/src/main/res/drawable/bubble_clear.xml
@@ -5,7 +5,7 @@
         android:drawable="@drawable/ic_cross_white_24dp"
         android:left="8dp"
         android:right="8dp"
-        android:top="8dp"></item>
+        android:top="8dp" />
     <item>
         <shape android:shape="oval">
             <stroke
