--- a/app/src/main/res/layout/activity_main_top.xml
+++ b/app/src/main/res/layout/activity_main_top.xml
@@ -78,7 +78,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:contentDescription="@null"
-                app:srcCompat="@drawable/ic_earth"
+                app:srcCompat="@drawable/ic_public_white_24dp"
                 tools:tint="@color/blue_800" />
 
             <TextView
