--- a/app/src/main/res/layout/bubble_discard_bg.xml
+++ b/app/src/main/res/layout/bubble_discard_bg.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,7 +27,8 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="48dp"
-            app:srcCompat="@drawable/bubble_clear" />
+            android:contentDescription="@string/close_bubble"
+            android:src="@drawable/bubble_clear" />
 
     </RelativeLayout>
 
